re PR middle-end/19874 (ICE in emit_move_insn with __attribute__((mode (QI))) enum)

PR middle-end/19874
	* tree-ssa.c (tree_ssa_useless_type_conversion_1): A conversion
	between different machine modes is never a "useless" conversion.

	* gcc.c-torture/execute/20050119-2.c: New test case.

From-SVN: r95688